# llm-anthropic

./: .gitignore  Justfile  README.md  demo.md  llm_anthropic.py  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_anthropic.py  test_claude_3.py
tests/cassettes/test_anthropic/: test_async_prompt.yaml  test_image_prompt.yaml  test_image_with_no_prompt.yaml  test_prompt.yaml  test_prompt_with_prefill_and_stop_sequences.yaml  test_schema_prompt.yaml  test_schema_prompt_async.yaml  test_thinking_prompt.yaml  test_tools.yaml  test_url_prompt.yaml  test_web_search.yaml
