[project]
name = "llm-anthropic"
version = "0.22"
description = "LLM access to models by Anthropic, including the Claude series"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "llm>=0.26",
    "anthropic>=0.73.0",
    "json-schema-to-pydantic",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-anthropic"
Changelog = "https://github.com/simonw/llm-anthropic/releases"
Issues = "https://github.com/simonw/llm-anthropic/issues"
CI = "https://github.com/simonw/llm-anthropic/actions"

[project.entry-points.llm]
anthropic = "llm_anthropic"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "cogapp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
